# compression-energy

./: .gitignore  README.MD
analysis/energy-calculation/: amd-cpu-energy-calculation.py  amd-cpu-energy-omp-calculation.py  compression_metrics_omp_with_energy.csv  compression_metrics_with_energy.csv  energy-plot.py  energy-script-2.py
analysis/io-test-calculation/: io_plot.py  io_results.csv
analysis/lossless_compression/: lossless.py
analysis/parallel-write/: parallel_write.py  parallel_write_experiment.csv  parallel_write_experiment2.csv
scripts/: omp-compress.sh  serial-compress.sh  slurm-117475.out  slurm-117476.out  slurm-117491.out  slurm-117499.out  slurm-117593.out  slurm-117979.out  slurm-117981.out  slurm-117984.out  slurm-117988.out  slurm-117990.out  slurm-117992.out  slurm-117993.out  slurm-118009.out  slurm-118072.out  slurm-118531.out  slurm-118532.out  slurm-118533.out  slurm-118534.out  slurm-118535.out  slurm-118536.out  slurm-118537.out  slurm-118538.out  slurm-118539.out  slurm-118540.out  slurm-118588.out  slurm-118591.out  slurm-118652.out  slurm-118653.out  slurm-118654.out  slurm-118680.out  slurm-118874.out  slurm-118895.out  slurm-118959.out  slurm-118962.out  slurm-118964.out  slurm-119036.out  slurm-119037.out  slurm-119044.out  (+9 more)
scripts/psc/: inflate-nyx.sh  io-test.sh  large-nyx.sh  mgardx-omp.sh  mgardx-serial.sh  omp-compress.sh  serial-compress.sh  slurm-25025011.out  slurm-25026359.out  slurm-25026545.out  slurm-25031976.out  slurm-25032007.out  slurm-25032030.out  slurm-25035548.out  slurm-25039999.out  slurm-25040003.out  slurm-25040004.out  slurm-25041772.out  slurm-25150947.out  slurm-25150952.out  slurm-25157290.out  slurm-25158149.out  slurm-25158159.out  slurm-25158227.out  slurm-25158236.out  slurm-25158242.out  slurm-25158606.out  slurm-25158626.out  slurm-25158641.out  slurm-25158653.out  slurm-25158723.out  slurm-25159392.out  slurm-25159813.out  slurm-25167593.out  slurm-25167911.out  slurm-25168156.out  slurm-25177396.out  slurm-25185129.out  slurm-25185651.out  slurm-25186733.out  (+37 more)
scripts/stampede/: io-test-szx.sh  io-test.e1065684  io-test.e1065697  io-test.e1065700  io-test.e1068907  io-test.e1068989  io-test.e1070461  io-test.e1070542  io-test.e1072435  io-test.e1100826  io-test.e1100827  io-test.o1065697  io-test.o1070542  io-test.o1105672  io-test.sh  mgard-serial.e1084637  mgard-serial.e1086117  mgard-serial.e929019  mgard-serial.o1084637  mgard-serial.o1103527  mgard-serial.o929019  mgardx-omp.e1103528  mgardx-omp.e929052  mgardx-omp.e929063  mgardx-omp.e964148  mgardx-omp.o929063  mgardx-omp.sh  mgardx-serial.sh  omp-compress.e1103505  omp-compress.e924683  omp-compress.e924696  omp-compress.e946441  omp-compress.e964157  omp-compress.o924683  omp-compress.o924696  omp-compress.o946441  (+92 more)
src/: compress.c
src/intel_compress_decompress/: CMakeLists.txt  Makefile  compress_cpu  compress_cpu.c  compress_cpu_large_nyx  compress_cpu_large_nyx.c  compress_cpu_omp  compress_cpu_omp.c  compress_gpu.c  compression_metrics.csv  compression_metrics_mgard_x.csv  compression_metrics_mgardx_omp.csv  compression_metrics_omp.csv  compression_metrics_qoz_omp.csv  compression_metrics_szx_omp.csv  compression_metrics_szx_serial.csv  cuszp  cuszp.cu  inflate_nyx  inflate_nyx.c  mgardx.cpp  mgardx_omp.cpp  szx_large_nyx  szx_large_nyx.c  szx_omp  szx_omp.c  szx_serial  szx_serial.c
src/io_profiling/: CMakeLists.txt  Makefile  compression_results.csv  io_results.csv  io_results_szx.csv  io_test  io_test.c  io_test_results.csv  mgardx_io_test.cpp  prepare_compressed_files.c  szx_io_test  szx_io_test.c
(+858 files in other folders)
